tests/cases/compiler-development/artifact/errors/diagnostic-missing-module.ari
mod missing_artifact_module;

fn main() -> i64 {
  return 0;
}
